# rust-serialization-benchmarks

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: data.rs  main.rs  spec.rs
