[package]
name = "rust_serialization_benchmark"
version = "0.1.0"
authors = ["theduke <chris@theduke.at>"]

[dependencies]
bencher = { git = "https://github.com/theduke/bencher.git" }
serde = "*"
serde_derive = "*"

serde_json = "*"
bincode = { version = "*", features = ["serde"] }
cbor = "*"
serde_cbor = "*"
serde_yaml = "*"
rmp-serde = "*"
toml = { version = "*", features = ["serde"] }
serde-pickle = "*"
serde-hjson = "*"
bson = "*"

